# tehnezis_bot

./: README.md
crypto/: bot.py
tehnezis_bot/: .env  alembic.ini  bot.py  docker-compose.yml  pyproject.toml
tehnezis_bot/alembic/: README  env.py
tehnezis_bot/alembic/versions/: 2f79174ecc36_add_added_at_column_to_crawling_target.py  3d310f20d519_add_price.py  6179cf95f254_test.py
tehnezis_bot/core/entities/: models.py  repositories.py  schemas.py
tehnezis_bot/core/use_cases/: process_file.py
tehnezis_bot/exel_file/: 111eee.xlsx
tehnezis_bot/infrastructure/: config.py
tehnezis_bot/infrastructure/database/: database.py  test_connection.py
tehnezis_bot/infrastructure/telegram_bot/: keyboards.py
tehnezis_bot/infrastructure/telegram_bot/handlers/: handlers.py
tehnezis_bot/tests/infrastructure/: test_price_fetch.py
